--- a/css/mobile_style.css
+++ b/css/mobile_style.css
@@ -76,7 +76,7 @@ h3 {
     height: 90vh;    
     display: flex;
     flex-flow: column;
-    background: url(/images/mobile/image-hero.jpg);
+    background: url(../images/mobile/image-hero.jpg);
     background-size: cover;  
     position: relative;
 }
@@ -242,56 +242,56 @@ h3 {
 }
 
 .creations__itens:nth-child(1) {
-    background: url(/images/mobile/image-deep-earth.jpg) 
+    background: url(../images/mobile/image-deep-earth.jpg) 
                       no-repeat
                       top center;
     background-size: cover;
 }
 
 .creations__itens:nth-child(2) {
-    background: url(/images/mobile/image-night-arcade.jpg) 
+    background: url(../images/mobile/image-night-arcade.jpg) 
                       no-repeat
                       top center;
     background-size: cover;
 }
 
 .creations__itens:nth-child(3) {
-    background: url(/images/mobile/image-soccer-team.jpg) 
+    background: url(../images/mobile/image-soccer-team.jpg) 
                       no-repeat
                       top center;
     background-size: cover;  
 }
 
 .creations__itens:nth-child(4) {
-    background: url(/images/mobile/image-grid.jpg) 
+    background: url(../images/mobile/image-grid.jpg) 
                       no-repeat
                       top center;
     background-size: cover;    
 }
 
 .creations__itens:nth-child(5) {
-    background: url(/images/mobile/image-from-above.jpg) 
+    background: url(../images/mobile/image-from-above.jpg) 
                       no-repeat
                       top center;
     background-size: cover;
 }
 
 .creations__itens:nth-child(6) {
-    background: url(/images/mobile/image-pocket-borealis.jpg) 
+    background: url(../images/mobile/image-pocket-borealis.jpg) 
                       no-repeat
                       top center;
     background-size: cover;                  
 }
 
 .creations__itens:nth-child(7) {
-    background: url(/images/mobile/image-curiosity.jpg) 
+    background: url(../images/mobile/image-curiosity.jpg) 
                       no-repeat
                       top center;
     background-size: cover;
 }
 
 .creations__itens:nth-child(8) {
-    background: url(/images/mobile/image-fisheye.jpg) 
+    background: url(../images/mobile/image-fisheye.jpg) 
                       no-repeat
                       top center;
     background-size: cover;
