--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
     .menu__desktop a:hover + .border-detail { border-bottom: solid 2px var(--white); }
 
     .hero { 
-        background: url(/images/desktop/image-hero.jpg);
+        background: url(../images/desktop/image-hero.jpg);
         background-size: cover; 
      }     
     .hero__call { padding: 5rem 6rem; }
@@ -87,56 +87,56 @@
     }
 
     .creations__itens:nth-child(1) {        
-        background: url(/images/desktop/image-deep-earth.jpg) 
+        background: url(../images/desktop/image-deep-earth.jpg) 
                           no-repeat
                           top center;
         background-size: cover;
     }
 
     .creations__itens:nth-child(2) {        
-        background: url(/images/desktop/image-night-arcade.jpg) 
+        background: url(../images/desktop/image-night-arcade.jpg) 
                           no-repeat
                           top center;
         background-size: cover;
     }
 
     .creations__itens:nth-child(3) {
-        background: url(/images/desktop/image-soccer-team.jpg) 
+        background: url(../images/desktop/image-soccer-team.jpg) 
                           no-repeat
                           top center;
         background-size: cover;  
     }
     
     .creations__itens:nth-child(4) {
-        background: url(/images/desktop/image-grid.jpg) 
+        background: url(../images/desktop/image-grid.jpg) 
                           no-repeat
                           top center;
         background-size: cover;    
     }
 
     .creations__itens:nth-child(5) {
-        background: url(/images/desktop/image-from-above.jpg) 
+        background: url(../images/desktop/image-from-above.jpg) 
                           no-repeat
                           top center;
         background-size: cover;
     }
 
     .creations__itens:nth-child(6) {
-        background: url(/images/desktop/image-pocket-borealis.jpg) 
+        background: url(../images/desktop/image-pocket-borealis.jpg) 
                           no-repeat
                           top center;
         background-size: cover;                  
     }
 
     .creations__itens:nth-child(7) {
-        background: url(/images/desktop/image-curiosity.jpg) 
+        background: url(../images/desktop/image-curiosity.jpg) 
                           no-repeat
                           top center;
         background-size: cover;
     }
 
     .creations__itens:nth-child(8) {
-        background: url(/images/desktop/image-fisheye.jpg) 
+        background: url(../images/desktop/image-fisheye.jpg) 
                           no-repeat
                           top center;
         background-size: cover;
